--- a/trunk/modules/kin/skins/xe_official/toplist.html
+++ b/trunk/modules/kin/skins/xe_official/toplist.html
@@ -1,7 +1,7 @@
 
 	<div class="topPoint">
 		<table width="100%" cellspacing="0" cellpadding="0" border="0" class="listBox">
-			<thead><tr><th colspan=2>Points top 5</th></tr></thead>
+			<thead><tr><th colspan=2>{$lang->topToltal} 5</th></tr></thead>
 			<tbody>
 				<!--@foreach($document_top['total'] as $row)-->
 				<tr>
@@ -9,7 +9,7 @@
 						&nbsp;{$row['user_name']}
 					</td>
 					<td width="50%" align="right" class="ln23">
-						{$row['point']}&nbsp;&nbsp;
+						{number_format($row['point'])}&nbsp;&nbsp;
 					</td>
 				</tr>
 				<!--@end-->
@@ -18,7 +18,7 @@
 	</div>
 	<div class="topPeriodPoint">
 		<table width="100%" cellspacing="0" cellpadding="0" border="0"  class="listBox">
-			<thead><tr><th colspan=2>Last Week points top 5</th></tr></thead>
+			<thead><tr><th colspan=2>{$lang->topLastWeek} 5</th></tr></thead>
 			<tbody>
 				<!--@foreach($document_top['lastWeek'] as $row)-->
 				<tr>
@@ -26,7 +26,7 @@
 						&nbsp;{$row['user_name']}
 					</td>
 					<td width="50%" align="right" class="ln23">
-						{$row['point']}&nbsp;&nbsp;
+						{number_format($row['point'])}&nbsp;&nbsp;
 					</td>
 				</tr>
 				<!--@end-->
@@ -35,7 +35,7 @@
 	</div>
 	<div class="MonthTopPoint">
 		<table width="100%" cellspacing="0" cellpadding="0" border="0"  class="listBox">
-			<thead><tr><th colspan=2>Last Month points top 5</th></tr></thead>
+			<thead><tr><th colspan=2>{$lang->topLastMonth} 5</th></tr></thead>
 			<tbody>
 				<!--@foreach($document_top['lastMonth'] as $row)-->
 				<tr>
@@ -43,7 +43,7 @@
 						&nbsp;{$row['user_name']}
 					</td>
 					<td width="50%" align="right" class="ln23">
-						{$row['point']}&nbsp;&nbsp;
+						{number_format($row['point'])}&nbsp;&nbsp;
 					</td>
 				</tr>
 				<!--@end-->
