--- a/trunk/modules/kin/skins/xe_official/index.html
+++ b/trunk/modules/kin/skins/xe_official/index.html
@@ -159,6 +159,7 @@
 	<!--@if($type=='replies')-->{$lang->kin_main_tabs[3]}<!--@end-->
 	<!--@if($type=='selected')-->{$lang->kin_main_tabs[4]}<!--@end-->
 	<!--@if($is_logged)--><!--@if($type=='my_questions')-->{$lang->kin_main_tabs[5]}<!--@end--><!--@end-->
+	<!--@if($is_logged)--><!--@if($type=='my_replies')-->{$lang->kin_main_tabs[6]}<!--@end--><!--@end-->
     <!--@if($search_keyword)-->
     <span>, {$lang->search_keyword} :</span>
     {$search_keyword}
