--- a/trunk/modules/kin/tpl/_header.html
+++ b/trunk/modules/kin/tpl/_header.html
@@ -7,7 +7,7 @@
 <!--@if(!empty($module_srl))-->
     <h4 class="xeAdmin">
         {$module_info->mid}
-        <span class="vr">|</span> 
+        <span class="vr">|</span>
         <a href="{getSiteUrl($module_info->domain,'','mid',$module_info->mid)}" onclick="window.open(this.href); return false;" class="view">View</a>
     </h4>
 <!--@end-->
@@ -18,7 +18,7 @@
         <li><a href="{getUrl('act','')}">{$lang->cmd_back}</a></li>
         <!--@end-->
 
-        <li <!--@if($act=='dispKinAdminInsert')-->class="on"<!--@end-->><a href="{getUrl('act','dispKinAdminInsert')}">{$lang->cmd_setup}</a></li>
+        <li <!--@if($act=='dispKinAdminInsert')-->class="on"<!--@end-->><a href="{getUrl('act','dispKinAdminInsert')}"><!--@if(empty($module_srl))-->{$lang->cmd_new}<!--@else-->{$lang->cmd_setup}<!--@end--></a></li>
 		<!--@if(!empty($module_srl))-->
         <li <!--@if($act=='dispKinAdminCategory')-->class="on"<!--@end-->><a href="{getUrl('act','dispKinAdminCategory')}">{$lang->cmd_manage_category}</a></li>
         <li <!--@if($act=='dispKinAdminAdditions')-->class="on"<!--@end-->><a href="{getUrl('act','dispKinAdminAdditions')}">{$lang->cmd_addition_setup}</a></li>
