--- a/trunk/modules/kin/skins/xe_official/view.html
+++ b/trunk/modules/kin/skins/xe_official/view.html
@@ -4,10 +4,9 @@
     <div class="roundBoxGuide"><span class="roundBoxTl"></span><span class="roundBoxTr"></span></div>
     <div class="roundContents content">
         <div class="titleArea">
-            <h3 style="float:left;margin-right:6px"><span class='pointGift' >{$oDocument->getTitle()}</span></h3>
-            <h3 style="color:orange;">{$document_point}</h3>
+            <h3>{$oDocument->getTitle()}</h3>
             <!--@if($module_info->use_category == "Y" && $oDocument->get('category_srl'))-->
-            <br/><a href="{getUrl('document_srl','','category_srl',$oDocument->get('category_srl'))}" class="category">{$categories[$oDocument->get('category_srl')]->title}</a>
+            <a href="{getUrl('document_srl','','category_srl',$oDocument->get('category_srl'))}" class="category">{$categories[$oDocument->get('category_srl')]->title}</a>
             <!--@end-->
             <a href="#" onclick="return false;" class="author member_{$oDocument->get('member_srl')}">{$oDocument->getNickName()}</a>
             <span class="date"><strong>{$oDocument->getRegdate('Y.m.d')}</strong> {$oDocument->getRegdate('H:i')}</span>
