--- a/trunk/modules/kin/skins/xe_official/index.html
+++ b/trunk/modules/kin/skins/xe_official/index.html
@@ -84,7 +84,7 @@
             <!--@if($oDocument->getCommentCount())--><span>{$oDocument->getCommentCount()}</span><!--@end-->
         </td>
         <!--@if($type!='my_questions')-->
-        <td class="author"><a href="#" onclick="return false;" class="member_{$oDocument->get('member_srl')}">{$oDocument->getNickName()}</a></td>
+        <td class="author"><a href="#" onclick="return false;" class="member_{$oDocument->get('member_srl')}">{$oDocument->getUserName()}</a></td>
         <!--@end-->
         <td class="date">{$oDocument->getRegdate("y.m.d")}</td>
     </tr>
