--- a/trunk/modules/kin/tpl/_header.html
+++ b/trunk/modules/kin/tpl/_header.html
@@ -1,3 +1,5 @@
+<!--%import("css/kin.css")-->
+
 <h3 class="xeAdmin">{$lang->kin} <span class="gray">{$lang->cmd_management}</span></h3>
 
 <div class="infoText">{nl2br($lang->about_kin)}</div>
