--- a/trunk/modules/kin/tpl/member_list.html
+++ b/trunk/modules/kin/tpl/member_list.html
@@ -27,7 +27,7 @@
                 <input type="text" id="point_{$val->member_srl}" name="point" class="inputTypeText w80" />
                 <span class="button"><input type="button" value="+" onclick="updatePoint({$val->member_srl}, 'add')"/></span>
                 <span class="button"><input type="button" value="-" onclick="updatePoint({$val->member_srl}, 'minus')"/></span>
-                <span class="button"><input type="button" value="{$lang->cmd_update}" onclick="updatePoint({$val->member_srl}, 'update')" /></span>
+                <!--<span class="button"><input type="button" value="{$lang->cmd_update}" onclick="updatePoint({$val->member_srl}, 'update')" /></span>-->
             </form>
         </td>
     </tr>
